# nrf24l01_pico_serial

src/: CMakeLists.txt
src/host/: receive.cpp  receive_pico_out.py  send.cpp  send_pico_in.py
src/pico/: main.py
